Improved performance via periodic pre-rendering

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link id="theme-css" rel="stylesheet" type="text/css" href="/css/main.css">
     <!-- Javascript -->
     <script src="https://unpkg.com/tone"></script>
-    <script type="module" src="js/controls.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
 </head>
 
 <body>
